--- a/gerador.css
+++ b/gerador.css
@@ -1,9 +1,3 @@
-/* body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-
 @import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap');
 
 * {
@@ -19,7 +13,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 190vh;
 }
 
 h1 {
@@ -28,7 +21,7 @@ h1 {
 }
 
 label {
-    font-size: 17px;
+    font-size: 24px;
     margin: 10px 0;
 }
 
@@ -40,7 +33,10 @@ label {
     height: 160px;
     padding: 8px;
     font-size: 16px;
+    background-color: #fff;
+    text-wrap: wrap;
     /* width: 400px; */
+    
 }
 
 #btnGerar {
@@ -51,8 +47,8 @@ label {
     padding: 15px;
     border: none;
     border-radius: 7px;
-    width: 400px;
-    height: 60px;
+    width: 700px;
+    height: 70px;
     font-weight: 600;
     cursor: pointer;
     transition: ease 0.2s;
@@ -67,19 +63,31 @@ label {
 strong {
     color: #000;
     margin-right: 5px;
+    font-size: 22px;
+    text-wrap: nowrap;
+}
+
+.result {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 72px;
+}
+.result p {
+    font-size: 22px;
 }
 
 #hash:hover {
     color: #4c82af;
     cursor: pointer;
-    /* background-color: #f0f0f0; */
+    background-color: #f0f0f0;
 }
 
 p {
-    font-size: 17px;
+    font-size: 20px;
     font-weight: 300;
     color: #000000ce;
-    margin-bottom: 5px;
 }
 
 span {
@@ -96,7 +104,7 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 80px 0;
+    padding: 110px 25%;
 }
 
 .container {
@@ -105,4 +113,5 @@ form {
     justify-content: center;
     align-items: center;
     max-width: 550px;
+    margin: 100px 0 0 0 ;
 }
